--- a/objectdetect/object/templates/object/saved.html
+++ b/objectdetect/object/templates/object/saved.html
@@ -1,17 +1,233 @@
 <html>
+<style>
+   #invoice{
+    padding: 30px;
+}
+
+.invoice {
+    position: relative;
+    background-color: #FFF;
+    min-height: 680px;
+    padding: 15px
+}
+
+.invoice header {
+    padding: 10px 0;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #3989c6
+}
+
+.invoice .company-details {
+    text-align: right
+}
+
+.invoice .company-details .name {
+    margin-top: 0;
+    margin-bottom: 0
+}
+
+.invoice .contacts {
+    margin-bottom: 20px
+}
+
+.invoice .invoice-to {
+    text-align: left
+}
+
+.invoice .invoice-to .to {
+    margin-top: 0;
+    margin-bottom: 0
+}
+
+.invoice .invoice-details {
+    text-align: right
+}
+
+.invoice .invoice-details .invoice-id {
+    margin-top: 0;
+    color: #3989c6
+}
+
+.invoice main {
+    padding-bottom: 50px
+}
+
+.invoice main .thanks {
+    margin-top: -100px;
+    font-size: 2em;
+    margin-bottom: 50px
+}
+
+.invoice main .notices {
+    padding-left: 6px;
+    border-left: 6px solid #3989c6
+}
+
+.invoice main .notices .notice {
+    font-size: 1.2em
+}
+
+.invoice table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin-bottom: 20px
+}
+
+.invoice table td,.invoice table th {
+    padding: 15px;
+    background: #eee;
+    border-bottom: 1px solid #fff
+}
+
+.invoice table th {
+    white-space: nowrap;
+    font-weight: 400;
+    font-size: 16px
+}
+
+.invoice table td h3 {
+    margin: 0;
+    font-weight: 400;
+    color: #3989c6;
+    font-size: 1.2em
+}
+
+.invoice table .qty,.invoice table .total,.invoice table .unit {
+    text-align: right;
+    font-size: 1.2em
+}
+
+.invoice table .no {
+    color: #fff;
+    font-size: 1.6em;
+    background: #3989c6
+}
+
+.invoice table .unit {
+    background: #ddd
+}
+
+.invoice table .total {
+    background: #3989c6;
+    color: #fff
+}
+
+.invoice table tbody tr:last-child td {
+    border: none
+}
+
+.invoice table tfoot td {
+    background: 0 0;
+    border-bottom: none;
+    white-space: nowrap;
+    text-align: right;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    border-top: 1px solid #aaa
+}
+
+.invoice table tfoot tr:first-child td {
+    border-top: none
+}
+
+.invoice table tfoot tr:last-child td {
+    color: #3989c6;
+    font-size: 1.4em;
+    border-top: 1px solid #3989c6
+}
+
+.invoice table tfoot tr td:first-child {
+    border: none
+}
+
+.invoice footer {
+    width: 100%;
+    text-align: center;
+    color: #777;
+    border-top: 1px solid #aaa;
+    padding: 8px 0
+}
+
+@media print {
+    .invoice {
+        font-size: 11px!important;
+        overflow: hidden!important
+    }
+
+    .invoice footer {
+        position: absolute;
+        bottom: 10px;
+        page-break-after: always
+    }
+
+    .invoice>div:last-child {
+        page-break-before: always
+    }
+}
+</style>
    <body>
 
-      {% if saved %}
-         <strong>Your Image was  added</strong><br>
-         <strong>Issue Number : {{issue_id}} </strong><br>
-         <strong>Assigned Worker Name : {{worker_name}}</strong><br>
-         <strong>Assigned Worker Email : {{worker_email}}</strong><br>
-         <strong>Status : {{status}}</strong><br>
-      {% endif %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-      {% if not saved %}
-         <strong>Your Image  was not added</strong>
-      {% endif %}
+<!--Author      : @arboshiki-->
+<div id="invoice">
+
+    <div class="invoice overflow-auto">
+        <div style="min-width: 600px">
+            <header>
+                <div class="row">
+                    <div class="col">
+                        {% if saved %}
+                            <strong>Your Image was  added</strong><br>
+                        {% endif %}
+                        {% if not saved %}
+                            Your Image  was not added
+                        {% endif %}
+                    </div>
+                </div>
+            </header>
+            {% if saved %}
+            <main>
+                </div>
+                <table width="20" border="0" cellspacing="0" cellpadding="0" >
+                    <thead>
+                        <tr>
+                            <th class="text-left">FIELD</th>
+                            <th class="text-right">VALUE</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="qty">Issue Number</td>
+                            <td class="total">{{issue_id}}</td>
+                        </tr>
+                        <tr>
+
+                            <td class="qty">Worker Name</td>
+                            <td class="total">{{worker_name}}</td>
+                        </tr>
+                        <tr>
+                            <td class="qty">Worker Email</td>
+                            <td class="total">{{worker_email}}</td>
+                        </tr>
+                        <tr>
+                            <td class="qty">Status</td>
+                            <td class="total">{{status}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="thanks">Thank you!</div>
+            </main>
+            {% endif %}
+        </div>
+        <!--DO NOT DELETE THIS div. IT is responsible for showing footer always at the bottom-->
+        <div></div>
+    </div>
+</div>
 
 
    </body>
