--- a/objectdetect/object/templates/object/upload_image.html
+++ b/objectdetect/object/templates/object/upload_image.html
@@ -83,17 +83,18 @@ footer a {
                         <input type="hidden" id="long" name="long" value="" />
                         <input type="hidden" id="lat" name="lat" value="" />
                         <div class="form-group">
-                            <input id="name" name="name"> Name  </input>
+                            <input id="name" name="name"/> Name
                         </div>
                         <div class="form-group">
-                            <input id ="aadhar" name="aadhar"> Aadhar Number </input>
+                            <input id ="aadhar" name="aadhar"/> Aadhar Number
                         </div>
                         <div class="form-group">
                             <label for="picture"> Picture </label>
                             <input id ="picture" name="picture" type = "file" />
                         </div>
                         <div class="mx-auto">
-                        <input  type = "submit" id="submit_query" value="Submit"/>
+                        <input type = "submit" id="submit_query" value="Submit"/>
+                        </div>
                     </form>
                 </div>
             </div>
