--- a/objectdetect/object/templates/object/saved.html
+++ b/objectdetect/object/templates/object/saved.html
@@ -223,11 +223,11 @@
                         </tr>
                         <tr>
                             <td class="qty">Request Category Type</td>
-                            <td class="total">{{category}}</td>
+                            <td class="total">{{image_type}}</td>
                         </tr>
                     </tbody>
                 </table>
-                <a href="{% url 'object:comments' %}">Thank you! You can also comment on your request</a>
+                <a href="{% url 'object:add_comments' %}">Thank you! You can also comment on your request</a>
 
             </main>
             {% endif %}
